--- a/examples/active-slide.html
+++ b/examples/active-slide.html
@@ -107,7 +107,7 @@
 </div>
 
 <script type="text/javascript" src="../dist/fullpage.js"></script>
-<script type="text/javascript" src="examples.js"></script>
+<!-- <script type="text/javascript" src="examples.js"></script> -->
 <script type="text/javascript">
     var myFullpage = new fullpage('#fullpage', {
         sectionsColor: ['#1bbc9b', '#4BBFC3', '#7BAABE', 'whitesmoke', '#ccddff'],
