--- a/examples/scroll-horizontally.html
+++ b/examples/scroll-horizontally.html
@@ -390,6 +390,7 @@
                 <h3 class="sec4-head">We consider ourselves storytellers!</h3>
                 <h2 class="sec4-title">That’s Us!</h2>
                 <div class="sec4-right">
+                    <img class="sec4-rightimg" src="../image/Farbod-Sucher-Team.png" alt="">
                     <p class="sec4-p">
                         <strong> Mehrdad </strong>is a web-developer with a
                         background in Electronics and Robotics. His motto is “I
@@ -403,6 +404,7 @@
                     </p>
                 </div>
                 <div class="sec4-left">
+                    <img  class="sec4-leftimg" src="../image/Mehrdad-Sucher-Team.png" alt="">
                     <p class="sec4-p">
                         <strong> Mehrdad </strong>is a web-developer with a
                         background in Electronics and Robotics. His motto is “I
@@ -581,13 +583,13 @@
                             </div>
                                <div class="footerdesc">
 
-                                    <div id="footerdescdiv1"> <h2>
+                                    <div class="footerdescdiv1"> <h2>
                                         OO Pictures GmbH<br/>
                                         Sucher Tech department <br/>
                                         Lückstraße 23, 10317 Berlin
                                         </h2>
                                     </div>
-                                    <div class="footerdescdiv2">
+                                    <div class="footerdescdiv2" id="sociall">
                                         <img src="/image/facebook.png" alt=""> 
                                         <img src="/image/instagram.png" alt=""> 
                                         <img src="/image/twitter.png" alt=""> 
